tests/NormalTests/paczka1/fuzzy1/94879397.err
Error in line 11: kBBgr1nzizwA83821,1
Error in line 12: Fov7L3XM A123 76,8
Error in line 9: kBBgr1nzizw A180 55,7
Error in line 15: kBBgr1nzizw A838 21,7
Error in line 32: Fov7L3XM A59 16,6
Error in line 38: fmB86I1dU A59 -2,7
Error in line 39: kW7v4t A123 36,02
